Added project sections and spaces for thumbnails of the projects

--- a/index.html
+++ b/index.html
@@ -18,18 +18,58 @@
   <main>
     <section id="welcome-section">
       <h1>Welcome to My Portfolio</h1>
+      <p class="hero-tagline">I'm a developer who is evolving their skillset. Here's what I've been working on.</p>
     </section>
 
     <section id="projects">
       <div class="project-tile">
-        <h2>freeCodeCamp Project 1 - Survey Form</h2>
-        <p>As part of the freeCodeCamp curriculum for HTML and CSS development, I created a survey form that met their requirement standards with a premise for something I found interesting at the time.</p>
-        <a href="https://example.com" target="_blank">View Project</a>
+        <img src="examplethumbnail.jpg" alt="Survey Form Screenshot" class="project-thumb"><!--link to actual thumbnail-->
+        <h2>Survey Form</h2>
+        <p>Built for freeCodeCamp. Demonstrates form layout and CSS styling.</p>
+        <a href="https://github.com/tylerhuynh287/Survey-Form-fCC" target="_blank" rel="noopener">View Project</a>
+      </div>
+    </section>
+    
+    <section id="projects">
+      <div class="project-tile">
+        <img src="examplethumbnail.jpg" alt="Tribute Page Screenshot" class="project-thumb"><!--link to actual thumbnail-->
+        <h2>Tribute Page</h2>
+        <p>Lorem Ipsum</p>
+        <a href="https://github.com/tylerhuynh287/Survey-Form-fCC" target="_blank" rel="noopener">View Project</a>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="project-tile">
+        <img src="examplethumbnail.jpg" alt="Lorem Ipsum Screenshot" class="project-thumb"><!--link to actual thumbnail-->
+        <h2>Lorem Ipsum</h2>
+        <p>Lorem Ipsum</p>
+        <a href="https://github.com/tylerhuynh287/Survey-Form-fCC" target="_blank" rel="noopener">View Project</a>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="project-tile">
+        <img src="examplethumbnail.jpg" alt="Lorem Ipsum Screenshot" class="project-thumb"><!--link to actual thumbnail-->
+        <h2>Lorem Ipsum</h2>
+        <p>Lorem Ipsum</p>
+        <a href="https://github.com/tylerhuynh287/Survey-Form-fCC" target="_blank" rel="noopener">View Project</a>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="project-tile">
+        <img src="examplethumbnail.jpg" alt="Lorem Ipsum Screenshot" class="project-thumb"><!--link to actual thumbnail-->
+        <h2>Lorem Ipsum</h2>
+        <p>Lorem Ipsum</p>
+        <a href="https://github.com/tylerhuynh287/Survey-Form-fCC" target="_blank" rel="noopener">View Project</a>
       </div>
     </section>
 
     <section id="about-me">
-      <a id="profile-link" href="https://github.com/tylerhuynh287" target="_blank">My GitHub Profile</a>
+      <h2>About Me</h2>
+      <p>I am Tyler, a developer currently learning full-stack development. I enjoy building sleek interfaces and efficient backends. Currently diving into more complex project work using Typescript primarily.</p>
+      <a id="profile-link" href="https://github.com/tylerhuynh287" target="_blank" rel="noopener">GitHub</a>
     </section>
   </main>
 </body>
